committing to update

--- a/Finding_the_lines.ipynb
+++ b/Finding_the_lines.ipynb
@@ -688,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Skip the sliding windows step once you know where the lines are"
+    "# Skip the sliding windows step once you know where the lines are"
    ]
   },
   {
