--- a/Sobel_Operator.ipynb
+++ b/Sobel_Operator.ipynb
@@ -302,11 +302,11 @@
     "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "    # 2) Take the derivative in x or y given orient = 'x' or 'y'\n",
     "    if orient == 'x':\n",
-    "        sobel = cv2.Sobel(gray, cv2.CV_64F, 1, 0, ksize=sobel_kernel)\n",
+    "        sobel = cv2.Sobel(gray, cv2.CV_64F, 1, 0)#, ksize=sobel_kernel)\n",
     "        # 3) Take the absolute value of the derivative or gradient\n",
     "        abs_sobel = np.absolute(sobel)\n",
     "    elif orient == 'y':\n",
-    "        sobel = cv2.Sobel(gray, cv2.CV_64F, 0, 1, ksize=sobel_kernel)\n",
+    "        sobel = cv2.Sobel(gray, cv2.CV_64F, 0, 1)#, ksize=sobel_kernel)\n",
     "        # 3) Take the absolute value of the derivative or gradient\n",
     "        abs_sobel = np.absolute(sobel)\n",
     "    else:\n",
@@ -627,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
